--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "account-rest-api",
-  "version": "1.0.0",
   "description": "RESTful API-blueprint for all things user accounts",
   "main": "index.js",
   "scripts": {
-    "test": "api-blueprint-validator apiary.apib"
+    "test": "api-blueprint-validator apiary.apib",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gr2m/account-rest-api.git"
+    "url": "https://github.com/gr2m/account-rest-api.git"
   },
   "keywords": [
     "apiary",
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/gr2m/account-rest-api#readme",
   "devDependencies": {
-    "api-blueprint-validator": "^0.1.3"
+    "api-blueprint-validator": "^0.1.3",
+    "semantic-release": "^4.3.4"
   }
 }
