--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,11 @@ cache:
 notifications:
   email: false
 node_js:
-  - '0.10'
-before_install:
-  - npm i -g npm@^2.0.0
+  - 4
 before_script:
   - npm prune
 after_success:
   - npm run semantic-release
+branches:
+  except:
+    - /^v\d+\.\d+\.\d+$/
