chore(travis): install gcc-4.8 & g++-4.8 for protagonist

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,13 @@ after_success:
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
+
+# for protagonist
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - gcc-4.8
+    - g++-4.8
+env: CXX="g++-4.8" CC="gcc-4.8"
