--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "RESTful API-blueprint for all things user accounts",
   "main": "index.js",
   "scripts": {
-    "test": "exit 0",
+    "test": "npm run -s summary",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "summary": "scripts/summary.js"
   },
